Upload CPU-training version

--- a/colab-train-zh-cn.ipynb
+++ b/colab-train-zh-cn.ipynb
@@ -270,11 +270,11 @@
         "\n",
         "\n",
         "def init_distributed(hparams, n_gpus, rank, group_name):\n",
-        "    assert torch.cuda.is_available(), \"Distributed mode requires CUDA.\"\n",
+        "    assert torch.cpu.is_available(), \"Distributed mode requires CUDA.\"\n",
         "    print(\"Initializing Distributed\")\n",
         "\n",
         "    # Set cuda device so everything is done on the right GPU.\n",
-        "    torch.cuda.set_device(rank % torch.cuda.device_count())\n",
+        "    torch.cpu.set_device(rank % torch.cpu.device_count())\n",
         "\n",
         "    # Initialize distributed communication\n",
         "    dist.init_process_group(\n",
@@ -316,7 +316,7 @@
         "\n",
         "\n",
         "def load_model(hparams):\n",
-        "    model = Tacotron2(hparams).cuda()\n",
+        "    model = Tacotron2(hparams).cpu()\n",
         "    if hparams.fp16_run:\n",
         "        model.decoder.attention_layer.score_mask_value = finfo('float16').min\n",
         "\n",
@@ -432,7 +432,7 @@
         "        init_distributed(hparams, n_gpus, rank, group_name)\n",
         "\n",
         "    torch.manual_seed(hparams.seed)\n",
-        "    torch.cuda.manual_seed(hparams.seed)\n",
+        "    torch.cpu.manual_seed(hparams.seed)\n",
         "\n",
         "    model = load_model(hparams)\n",
         "    learning_rate = hparams.learning_rate\n",
@@ -972,9 +972,9 @@
         "            with open(conf) as f:\n",
         "                json_config = json.loads(f.read())\n",
         "            h = AttrDict(json_config)\n",
-        "            torch.manual_seed(h.seed)\n",
-        "            hifigan = Generator(h).to(torch.device(\"cuda\"))\n",
-        "            state_dict_g = torch.load(hifigan_pretrained_model, map_location=torch.device(\"cuda\"))\n",
+        "            torch.manual_seed(h.seed)\n","cuda\"))\n",
+        "            state_dict_g = torch.load(hifigan_pretrain
+        "            hifigan = Generator(h).to(torch.device(\ed_model, map_location=torch.device(\"cuda\"))\n",
         "            hifigan.load_state_dict(state_dict_g[\"generator\"])\n",
         "            hifigan.eval()\n",
         "            hifigan.remove_weight_norm()\n",
@@ -1001,7 +1001,7 @@
         "            if has_MMI(state_dict):\n",
         "                raise Exception(\"ERROR: This notebook does not currently support MMI models.\")\n",
         "            model.load_state_dict(state_dict)\n",
-        "            _ = model.cuda().eval().half()\n",
+        "            _ = model.cpu().eval().half()\n",
         "            return model, hparams\n",
         "\n",
         "        model, hparams = get_Tactron2(TACOTRON2_ID)\n",
@@ -1017,7 +1017,7 @@
         "                else: i = ARPA(i)\n",
         "                with torch.no_grad(): # save VRAM by not including gradients\n",
         "                    sequence = np.array(text_to_sequence(i, [text_cleaner]))[None, :]\n",
-        "                    sequence = torch.autograd.Variable(torch.from_numpy(sequence)).cuda().long()\n",
+        "                    sequence = torch.autograd.Variable(torch.from_numpy(sequence)).cpu().long()\n",
         "                    mel_outputs, mel_outputs_postnet, _, alignments = model.inference(sequence)\n",
         "                    if show_graphs:\n",
         "                        plot_data((mel_outputs_postnet.float().data.cpu().numpy()[0],\n",
@@ -1200,11 +1200,11 @@
         "hparams.gate_threshold = 0.1 # Model must be 90% sure the clip is over before ending generation (the higher this number is, the more likely that the AI will keep generating until it reaches the Max Decoder Steps)\n",
         "model = Tacotron2(hparams)\n",
         "model.load_state_dict(torch.load(tacotron2_pretrained_model)['state_dict'])\n",
-        "_ = model.cuda().eval().half()\n",
+        "_ = model.cpu().eval().half()\n",
         "\n",
         "# Load WaveGlow\n",
         "waveglow = torch.load(waveglow_pretrained_model)['model']\n",
-        "waveglow.cuda().eval().half()\n",
+        "waveglow.cpu().eval().half()\n",
         "for k in waveglow.convinv:\n",
         "    k.float()\n",
         "denoiser = Denoiser(waveglow)"
@@ -1235,7 +1235,7 @@
         "    print(i)\n",
         "    with torch.no_grad(): # save VRAM by not including gradients\n",
         "        sequence = np.array(text_to_sequence(i, ['english_cleaners']))[None, :]\n",
-        "        sequence = torch.autograd.Variable(torch.from_numpy(sequence)).cuda().long()\n",
+        "        sequence = torch.autograd.Variable(torch.from_numpy(sequence)).cpu().long()\n",
         "        mel_outputs, mel_outputs_postnet, _, alignments = model.inference(sequence)\n",
         "        plot_data((mel_outputs_postnet.float().data.cpu().numpy()[0],\n",
         "                alignments.float().data.cpu().numpy()[0].T))\n",
