--- a/inference.ipynb
+++ b/inference.ipynb
@@ -87,7 +87,7 @@
     "checkpoint_path = \"ayachi_nene\"\n",
     "model = load_model(hparams)\n",
     "model.load_state_dict(torch.load(checkpoint_path)['state_dict'])\n",
-    "_ = model.cuda().eval()#.half()"
+    "_ = model.cpu().eval()#.half()"
    ]
   },
   {
@@ -105,7 +105,7 @@
    "source": [
     "waveglow_path = 'waveglow_256channels_universal_v5.pt'\n",
     "waveglow = torch.load(waveglow_path)['model']\n",
-    "waveglow.cuda().eval()#.half()\n",
+    "waveglow.cpu().eval()#.half()\n",
     "for k in waveglow.convinv:\n",
     "    k.float()\n",
     "denoiser = Denoiser(waveglow)"
@@ -127,7 +127,7 @@
     "text = \"こんにちは。\"\n",
     "sequence = np.array(text_to_sequence(text, ['japanese_cleaners']))[None, :]\n",
     "sequence = torch.autograd.Variable(\n",
-    "    torch.from_numpy(sequence)).cuda().long()"
+    "    torch.from_numpy(sequence)).cpu().long()"
    ]
   },
   {
